fixed menu font size / and member word wrap

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -134,7 +134,7 @@ input{
     ul {
         font-family: 'Athiti';
         font-size: 1em;
-        font-weight: 200;
+        font-weight: 400;
         list-style: none;
         padding: 0;
         margin: 0 auto;
@@ -195,7 +195,7 @@ input{
     margin: -68px  0  0 -14px;
     font-family: 'Athiti';
     font-size: .9em;
-    font-weight: 200;
+    font-weight: 400;
     a {
         color: $color-light;
         text-decoration: none;
